@@ -56,3 +56,9 @@ func (r *RunnerFactory) Create(
 
 	return p, nil
 }
+
+// CheckConfig checks if a config is valid or not
+func (r *RunnerFactory) CheckConfig(config *common.Config) error {
+	// TODO: add code here once we know that spinning up a filebeat input to check for errors doesn't cause memory leaks.
+	return nil
+}
